Assignment 5 finished