@@ -1,11 +1,7 @@
 package controller;
 
 import exceptions.InterpreterException;
-import model.ADTs.MyHeap;
-import model.ADTs.MyHeapInterface;
-import model.ADTs.MyStackInterface;
 import model.ProgramState;
-import model.Statements.StatementInterface;
 import model.Values.RefValue;
 import model.Values.Value;
 import repository.RepositoryInterface;
@@ -95,9 +91,21 @@ public class Controller {
     public List<ProgramState> removeCompletedPrograms(List<ProgramState> inputProgramList) {
         return inputProgramList.stream()
                 .filter(ProgramState::isNotCompleted)
-                .toList();
+                .collect(Collectors.toList());
     }
-
+    public void garbageCollectorWrapper() throws InterpreterException{
+        List<ProgramState> programStateList = repo.getProgramStatesList();
+        ProgramState oneState = programStateList.get(0);
+        // garbage collector
+        oneState.getHeap().setHeap(
+                garbageCollector(
+                        getAddrFromSymTable(
+                                programStateList.stream()
+                                        .map(programState -> programState.getSymbolTable().values())
+                                        .collect(Collectors.toList()),
+                                oneState.getHeap().getHeap()),
+                        oneState.getHeap().getHeap()));
+    }
     public Map<Integer, Value> garbageCollector(Set<Integer> symTableAddr, Map<Integer, Value> heap){ // why set as symTableAddr? because the addresses from the symbol table are unique
         return heap.entrySet().stream()
                 .filter(e -> symTableAddr.contains(e.getKey()))
@@ -105,40 +113,36 @@ public class Controller {
     }
 
     public void allSteps() throws InterpreterException{
-        this.executor = Executors.newFixedThreadPool(2);
-        // remove the completed programs
-        List<ProgramState> programStateList = removeCompletedPrograms(repo.getProgramStatesList());
-        while(!programStateList.isEmpty()){
-            ProgramState oneState = programStateList.get(0);
-            oneState.getHeap().setHeap(
-                    garbageCollector(
-                            getAddrFromSymTabke(
-                                    programStateList.stream()
-                                            .map(programState -> programState.getSymbolTable().values())
-                                            .toList(),
-                                    oneState.getHeap().getHeap()));
-            oneStepForAllPrograms(programStateList);
-            // remove the completed programs
-            programStateList = removeCompletedPrograms(repo.getProgramList());
-        }
-        executor.shutdownNow();
-        // HERE the repository still contains at least one Completed Prg
-        // and its List<PrgState> is not empty. Note that oneStepForAllPrg calls the method
-        // setPrgList of repository in order to change the repository
-
-        // update the repository state
-        repo.setProgramList(programStateList);
-    }
-    public void oneStepForAllPrograms(List<ProgramState> programStateList) throws InterpreterException {
-        programStateList.forEach(programState -> {
+        /*Resetting the log file in order to not have past executions of the program*/
+        repo.resetLogFile();
+        /*Printing the original program state*/
+        repo.getProgramStatesList().forEach(programState -> {
             try{
                 this.repo.logProgramStateExec(programState);
             } catch (InterpreterException e) {
                 System.out.println(e.getMessage());
             }
         });
+        this.executor = Executors.newFixedThreadPool(2);
+        // remove the completed programs
+        List<ProgramState> programStateList = removeCompletedPrograms(repo.getProgramStatesList());
+        while(!programStateList.isEmpty()){
+            garbageCollectorWrapper();
+            oneStepForAllPrograms(programStateList);
+            // remove the completed programs
+            programStateList = removeCompletedPrograms(repo.getProgramStatesList());
+        }
+        executor.shutdownNow();
+        // HERE the repository still contains at least one Completed Prg
+        // and its List<PrgState> is not empty. Note that oneStepForAllPrg calls the method
+        // setPrgList of repository in order to change the repository
+        // update the repository state
+        repo.setProgramStatesList(programStateList);
+    }
+    public void oneStepForAllPrograms(List<ProgramState> programStateList) throws InterpreterException {
+
         List<Callable<ProgramState>> callList = programStateList.stream()
-                .map((ProgramState p)->(Callable<ProgramState>)(p::oneStep))
+                .map((ProgramState programState)->(Callable<ProgramState>)(programState::oneStep))
                 .toList();
         // start the execution of the callables
         // it returns the list of new created PrgStates(namely, threads)
@@ -147,33 +151,54 @@ public class Controller {
                     .map(future -> {
                         try {
                             return future.get();
-                        } catch (InterruptedException | ExecutionException e) {
+                        } catch (Exception e) {
                             System.out.println(e.getMessage());
+                            return null;
                         }
-                        return null;
                     })
-                    .filter(Objects::nonNull)
-                    .toList();
-            programStateList.addAll(newProgramList);
-        } catch (InterruptedException e) {
+                    .filter(p -> p != null)
+                    .collect(Collectors.toList());
+            if (!newProgramList.isEmpty())
+                programStateList.add(newProgramList.get(0));
+        } catch (Exception e) {
             throw new InterpreterException(e.getMessage());
         }
         this.repo.setProgramStatesList(programStateList);
+
+        programStateList.stream().forEach(programState -> {
+            try{
+                this.repo.logProgramStateExec(programState);
+            } catch (InterpreterException e) {
+                System.out.println(e.getMessage());
+            }
+        });
+        /*If the execution stack is empty, print in the command line how all looks at the end*/
+        programStateList.stream()
+            .filter(programState -> programState.getExecutionStack().isEmpty())
+            .forEach(programState -> {
+                try{
+                    System.out.println(programState.toString());
+                } catch (Exception e) {
+                    System.out.println(e.getMessage());
+                }
+            });
+
     }
     public void resetProgramStates() throws InterpreterException {
         repo.resetProgramStates();
     }
 
-    Set<Integer> getAddrFromSymTabke(List<Collection<Value>> symbolTableValues, Map<Integer, Value> heap){
+    Set<Integer> getAddrFromSymTable(List<Collection<Value>> symbolTablesValues, Map<Integer, Value> heap){
         Set<Integer> toReturn = new TreeSet<>();
-        symbolTableValues.stream()
+        symbolTablesValues
+                .forEach(symbolTable -> symbolTable.stream()
                 .filter(v -> v instanceof RefValue)
                 .forEach(v -> {
                     while (v instanceof RefValue){
                         toReturn.add(((RefValue) v).getAddress());
                         v = heap.get(((RefValue) v).getAddress());
                     }
-                });
+                }));
         return toReturn;
     }
 }
